compil.err
Lecture des listes de paquets…
Construction de l'arbre des dépendances…
Lecture des informations d'état…
libglfw3-dev est déjà la version la plus récente (3.3.10-1build1).
libglew-dev est déjà la version la plus récente (2.2.0-4build1).
0 mis à jour, 0 nouvellement installés, 0 à enlever et 1 non mis à jour.
-- The CXX compiler identification is GNU 13.3.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found OpenMP_CXX: -fopenmp (found version "4.5") 
-- Found OpenMP: TRUE (found version "4.5")  
-- Found GLEW: /usr/include (found version "2.2.0") 
CMake Warning (dev) at /usr/share/cmake-3.28/Modules/FindOpenGL.cmake:381 (message):
  Policy CMP0072 is not set: FindOpenGL prefers GLVND by default when
  available.  Run "cmake --help-policy CMP0072" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  FindOpenGL found both a legacy GL library:

    OPENGL_gl_LIBRARY: /usr/lib/x86_64-linux-gnu/libGL.so

  and GLVND libraries for OpenGL and GLX:

    OPENGL_opengl_LIBRARY: /usr/lib/x86_64-linux-gnu/libOpenGL.so
    OPENGL_glx_LIBRARY: /usr/lib/x86_64-linux-gnu/libGLX.so

  OpenGL_GL_PREFERENCE has not been set to "GLVND" or "LEGACY", so for
  compatibility with CMake 3.10 and below the legacy GL library will be used.
Call Stack (most recent call first):
  CMakeLists.txt:22 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Found OpenGL: /usr/lib/x86_64-linux-gnu/libOpenGL.so   
-- YGL Configuration:
--   C++ Standard: 17
--   OpenMP: -fopenmp
--   GLEW Found: TRUE
--   GLFW3 Found: 1
--   OpenGL Found: TRUE
--   GLEW Include: /usr/include
--   GLFW3 Include: 
--   OpenGL Include: 
-- Configuring done (0.8s)
-- Generating done (0.0s)
-- Build files have been written to: /home/yannoo/Dev/YGL/build
[  5%] Building CXX object CMakeFiles/ygl.dir/src/core/bounding_box.cpp.o
[  8%] Building CXX object CMakeFiles/ygl.dir/src/core/camera.cpp.o
[  8%] Building CXX object CMakeFiles/ygl.dir/src/core/light.cpp.o
[ 11%] Building CXX object CMakeFiles/ygl.dir/src/core/mesh.cpp.o
In file included from /home/yannoo/Dev/YGL/include/core/object3d.hpp:3,
                 from /home/yannoo/Dev/YGL/include/core/camera.hpp:3,
                 from /home/yannoo/Dev/YGL/src/core/camera.cpp:1:
/home/yannoo/Dev/YGL/include/math/vec3.hpp:13:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   13 |         struct { float x, y, z; };
      |                ^
/home/yannoo/Dev/YGL/include/math/vec3.hpp:14:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   14 |         struct { float r, g, b; };
      |                ^
In file included from /home/yannoo/Dev/YGL/include/core/object3d.hpp:4:
/home/yannoo/Dev/YGL/include/math/quat.hpp:14:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   14 |         struct { float x, y, z, w; };
      |                ^
In file included from /home/yannoo/Dev/YGL/include/core/light.hpp:3,
                 from /home/yannoo/Dev/YGL/src/core/light.cpp:1:
/home/yannoo/Dev/YGL/include/math/vec3.hpp:13:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   13 |         struct { float x, y, z; };
      |                ^
/home/yannoo/Dev/YGL/include/math/vec3.hpp:14:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   14 |         struct { float r, g, b; };
      |                ^
In file included from /home/yannoo/Dev/YGL/include/core/bounding_box.hpp:3,
                 from /home/yannoo/Dev/YGL/src/core/bounding_box.cpp:1:
/home/yannoo/Dev/YGL/include/math/vec3.hpp:13:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   13 |         struct { float x, y, z; };
      |                ^
/home/yannoo/Dev/YGL/include/math/vec3.hpp:14:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   14 |         struct { float r, g, b; };
      |                ^
/home/yannoo/Dev/YGL/src/core/light.cpp:9:1: error: ‘Type’ does not name a type
    9 | Type Light::getType() const { return m_type; }
      | ^~~~
In file included from /home/yannoo/Dev/YGL/include/core/object3d.hpp:3,
                 from /home/yannoo/Dev/YGL/include/core/mesh.hpp:3,
                 from /home/yannoo/Dev/YGL/src/core/mesh.cpp:1:
/home/yannoo/Dev/YGL/include/math/vec3.hpp:13:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   13 |         struct { float x, y, z; };
      |                ^
/home/yannoo/Dev/YGL/include/math/vec3.hpp:14:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   14 |         struct { float r, g, b; };
      |                ^
In file included from /home/yannoo/Dev/YGL/include/core/object3d.hpp:4:
/home/yannoo/Dev/YGL/include/math/quat.hpp:14:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   14 |         struct { float x, y, z, w; };
      |                ^
gmake[2]: *** [CMakeFiles/ygl.dir/build.make:104 : CMakeFiles/ygl.dir/src/core/light.cpp.o] Erreur 1
gmake[2]: *** Attente des tâches non terminées....
In file included from /home/yannoo/Dev/YGL/include/core/mesh.hpp:5:
/home/yannoo/Dev/YGL/include/math/vec2.hpp:13:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   13 |         struct { float x, y; };
      |                ^
/home/yannoo/Dev/YGL/include/math/vec2.hpp:14:16: warning: ISO C++ prohibits anonymous structs [-Wpedantic]
   14 |         struct { float u, v; };
      |                ^
gmake[1]: *** [CMakeFiles/Makefile2:89 : CMakeFiles/ygl.dir/all] Erreur 2
gmake: *** [Makefile:91 : all] Erreur 2
